--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ body {
   padding: 20px 10px 0 10px;
   margin: 0;
   height: 347px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .messages .message {
   clear: both;
@@ -167,7 +167,8 @@ body {
   color: gray;
 }
 .bottom_wrapper .send_message {
-  width: 140px;
+  padding: 0 10px 0 10px;
+  margin: 0 10px 0 10px;
   height: 50px;
   display: inline-block;
   border-radius: 50px;
@@ -179,10 +180,12 @@ body {
   text-align: center;
   float: right;
 }
+
 .bottom_wrapper .send_message:hover {
   color: #a3d063;
   background-color: #fff;
 }
+
 .bottom_wrapper .send_message .text {
   font-size: 18px;
   font-weight: 300;
