--- a/css/index.css
+++ b/css/index.css
@@ -68,8 +68,8 @@ body {
   overflow: hidden;
   margin-bottom: 20px;
   transition: all 0.5s linear;
-  opacity: 0;
 }
+
 .messages .message.left .avatar {
   background-color: #f5886e;
   float: left;
@@ -201,5 +201,9 @@ body {
 }
 
 .message_template {
+  display: none;
+}
+
+.hidden {
   display: none;
 }
